glx/testdata/invalid/invalid-properties/persons/person-father.glx
persons:
  person-father:
    properties:
      name:
        value: "Robert Thompson"
        fields:
          given: "Robert"
          surname: "Thompson"
      gender: male
      invalid_property: "should fail"
      another_invalid: "also bad"
